--- a/DementiaHackWebsite/index.html
+++ b/DementiaHackWebsite/index.html
@@ -45,9 +45,11 @@
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/slide-2.png" alt="">
+                                <h2 class="imgText slide2">Integrated Real-time Information</h2>
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/slide-3.png" alt="">
+                                <h2 class="imgText slide3">Dignity for All</h2>
                             </div>
                         </div>
 
@@ -66,7 +68,7 @@
                     <hr class="tagline-divider">
                     <h2>
                         <small>
-                            <strong class = "wow fadeIn">The solution for blahhhhhhh</strong>
+                            <strong class = "wow fadeIn">A solution for tomorrow </strong>
                         </small>
                     </h2>
                 </div>
